# emotiv-rs

./: .gitrub_activity  CHANGELOG.md  Cargo.toml  LICENSE  RAW_FEATURE.md  README.md
examples/: client_mode.rs  facial_expression_train.rs  live_advance.rs  marker.rs  mental_command_train.rs  query_records.rs  raw_stream.rs  record.rs  simulate.rs  sub_data.rs
src/: client.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  protocol.rs  retry.rs  simulator.rs  types.rs
src/raw/: decryption.rs  device.rs  mod.rs  types.rs
src/reconnect/: mod.rs
tests/: integration.rs
tests/common/: mock_cortex.rs
